force-app/main/default/objects/Tour__c/Tour__c.object-meta.xml
<CustomObject>
    <description>Tour information</description>
    <label>Tour</label>
    <nameField>
        <label>Tour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tours</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>