force-app/main/default/objects/Tour__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Accommodation related to the tour</inlineHelpText>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipName>Accommodation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>