force-app/main/default/objects/Tour__c/fields/BeginDate__c.field-meta.xml
<CustomField>
    <fullName>BeginDate__c</fullName>
    <description>Tour begin date</description>
    <label>Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>