force-app/main/default/objects/Tour__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Tour end date</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>