force-app/main/default/objects/Tour__c/fields/GuestsNumber__c.field-meta.xml
<CustomField>
    <fullName>GuestsNumber__c</fullName>
    <description>Number of guests</description>
    <label>Guests number</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>