force-app/main/default/objects/Tour__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Place related to the tour</inlineHelpText>
    <label>Place</label>
    <referenceTo>Place__c</referenceTo>
    <relationshipName>Place</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>