force-app/main/default/objects/Tour__c/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <description>Visa requirement</description>
    <label>Visa</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>